Removed untitled nb

--- a/notebooks/01_dataset_builder.ipynb
+++ b/notebooks/01_dataset_builder.ipynb
@@ -59,7 +59,7 @@
     "class DatasetBuilder():\n",
     "    \"Build a dataset using `get_entities_in_text`\"\n",
     "    def __init__(self):\n",
-    "        self.db = WikiDatabase()\n",
+    "#         self.db = WikiDatabase()\n",
     "        self.nlp = spacy.load(\"en_core_web_sm\", disable=[\"tok2vec\", \"tagger\", \"parser\", \"attribute_ruler\", \"lemmatizer\"])\n",
     "\n",
     "#         module_url = \"https://tfhub.dev/google/universal-sentence-encoder/4\" #@param [\"https://tfhub.dev/google/universal-sentence-encoder/4\", \"https://tfhub.dev/google/universal-sentence-encoder-large/5\"]\n",
@@ -74,9 +74,18 @@
     "        elif dataset_type == 'relevant':\n",
     "            pass\n",
     "        \n",
+    "    def build_knowledge_entities(self, ds, split):\n",
+    "        ds = ds.map(self.get_entities, batched=True, num_proc=4)\n",
+    "        ds.save_to_disk('data/augmented_datasets/entities/' + split + '/')\n",
+    "        \n",
     "    def build_csv(self, ds, split):\n",
     "        ds = ds.map(self.retrieve_knowledge, batched=False)\n",
     "        ds.save_to_disk('data/augmented_datasets/')\n",
+    "        \n",
+    "    def get_entities(self, batch):\n",
+    "        import pdb; pdb.set_trace()\n",
+    "        doc = self.nlp(batch)\n",
+    "        entities = doc.ents\n",
     "        \n",
     "    def retrieve_knowledge(self, sequence):\n",
     "        text = sequence['text']\n",
@@ -141,71 +150,12 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<sqlite3.Connection object at 0x7fe9794d6b70>\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "Using custom data configuration default-d64f335cc8a13d66\n",
       "Reusing dataset text (/home/rob/.cache/huggingface/datasets/text/default-d64f335cc8a13d66/0.0.0/e16f44aa1b321ece1f87b07977cc5d70be93d69b20486d6dacd62e12cf25c9a5)\n",
-      "Loading cached processed dataset at /home/rob/.cache/huggingface/datasets/text/default-d64f335cc8a13d66/0.0.0/e16f44aa1b321ece1f87b07977cc5d70be93d69b20486d6dacd62e12cf25c9a5/cache-0a23571168d7228f.arrow\n",
-      "Parameter 'function'=<bound method DatasetBuilder.retrieve_knowledge of <__main__.DatasetBuilder object at 0x7fe998d9e4c0>> of the transform datasets.arrow_dataset.Dataset._map_single couldn't be hashed properly, a random hash was used instead. Make sure your transforms and parameters are serializable with pickle or dill for the dataset fingerprinting and caching to work. If you reuse this transform, the caching mechanism will consider it to be different from the previous calls and recompute everything. This warning is only showed once. Subsequent hashing failures won't be showed.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "076ee3d4039d4a80be0bdae4dfc06eb2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=484.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using custom data configuration default-d64f335cc8a13d66\n",
-      "Reusing dataset text (/home/rob/.cache/huggingface/datasets/text/default-d64f335cc8a13d66/0.0.0/e16f44aa1b321ece1f87b07977cc5d70be93d69b20486d6dacd62e12cf25c9a5)\n",
-      "Loading cached processed dataset at /home/rob/.cache/huggingface/datasets/text/default-d64f335cc8a13d66/0.0.0/e16f44aa1b321ece1f87b07977cc5d70be93d69b20486d6dacd62e12cf25c9a5/cache-fa00e6cd7ef5c332.arrow\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e95bbdf78e0648b78f186193bb959bf7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=490.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "Loading cached processed dataset at /home/rob/.cache/huggingface/datasets/text/default-d64f335cc8a13d66/0.0.0/e16f44aa1b321ece1f87b07977cc5d70be93d69b20486d6dacd62e12cf25c9a5/cache-afe4d9c5e6fd685f.arrow\n"
      ]
     }
    ],
@@ -221,11 +171,11 @@
     "\n",
     "split = 'train'\n",
     "ds = data_manager.load(split)\n",
-    "ds_builder.build_csv(ds, split)\n",
+    "ds_builder.build_knowledge_entities(ds, split)\n",
     "\n",
     "split = 'valid'\n",
     "ds = data_manager.load(split)\n",
-    "ds_builder.build_csv(ds, split)"
+    "ds_builder.build_knowledge_entities(ds, split)"
    ]
   },
   {
@@ -259,6 +209,7 @@
    "source": [
     "# creation\n",
     "ds_builder = DatasetBuilder()\n",
+    "\n",
     "assert isinstance(ds_builder, DatasetBuilder)"
    ]
   },
